[gd_scene load_steps=8 format=2]

[ext_resource path="res://Server.gd" type="Script" id=1]
[ext_resource path="res://Down Hill.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://PlayerManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://RoomManager.tscn" type="PackedScene" id=4]
[ext_resource path="res://WorldManager.tscn" type="PackedScene" id=5]
[ext_resource path="res://Worlds.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 2 )

[node name="Server" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 0 )

[node name="Control" type="Control" parent="Control"]
anchor_right = 1.0
margin_bottom = 75.0

[node name="ToggleServerBtn" type="Button" parent="Control/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Server Start"

[node name="ScrollContainer" type="ScrollContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 85.0
margin_right = -12.0
margin_bottom = -8.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/ScrollContainer"]

[node name="PlayerManager" parent="." instance=ExtResource( 3 )]

[node name="RoomManager" parent="." instance=ExtResource( 4 )]

[node name="WorldManager" parent="." instance=ExtResource( 5 )]

[node name="Worlds" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="Control/Control/ToggleServerBtn" to="." method="_on_ToggleServerBtn_pressed"]
